upgraded cluster and summary functions

--- a/CLINC150_clusters.ipynb
+++ b/CLINC150_clusters.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "IMDB Movie review.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -5176,7 +5175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2ew7HTbPpCJH",
         "colab": {
@@ -5411,7 +5410,7 @@
           ]
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5700,7 +5699,7 @@
       "metadata": {
         "id": "4EGMTUr6odLk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5709,12 +5708,12 @@
         "id": "l50X3GfjpU4r"
       },
       "source": [
-        "## 0.3 Explore the data "
+        "## 0.3 Explore the data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "y8qCnve_-lkO",
         "colab": {
@@ -5746,7 +5745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "QtTS4kpEpjbi",
         "colab": {
@@ -5824,7 +5823,7 @@
         "def embed(input):\n",
         "  return model(input)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5859,7 +5858,7 @@
       "metadata": {
         "id": "m9eVYTebRdgD"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5875,7 +5874,7 @@
         "id": "eVynPk3hRp-R",
         "outputId": "8e56776c-fd38-490b-91c9-dd0b93238311"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5898,7 +5897,7 @@
       "metadata": {
         "id": "LljLuj2ubbLD"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5915,14 +5914,20 @@
     {
       "cell_type": "code",
       "source": [
-        "def cluster_with_cosine_way(embeddings, way = 'complete'):\n",
+        "def cluster_with_many_ways(embeddings, way = 'complete', nsm = \"cosine\", thres = .7):\n",
+        "  \"\"\"now you have the option to safety experiment with other clustering methods\"\"\"\n",
+        "\n",
+        "  if way in [\"ward\", \"single\", \"average\"]:\n",
+        "    nsm = \"euclidean\"\n",
+        "    print(\"\"\"The input metric {0} is not compatible with method {1}.\n",
+        "    Updated metric to be euclidean.\"\"\".format(nsm, way))\n",
         "  # proprietary of ethelszhang@google.com, default to consine distance\n",
-        "  linkage_df = sch.linkage(embeddings, method = way, metric = \"cosine\")\n",
-        "  threshold = 0.7*max(linkage_df[:,2])\n",
+        "  linkage_df = sch.linkage(embeddings, method = way, metric = nsm)\n",
+        "  threshold = thres*max(linkage_df[:,2])\n",
         "  ncluster = sum([x[2] > threshold for x in linkage_df]) + 1\n",
         "  # create clusters\n",
         "  hc = AgglomerativeClustering(\n",
-        "      n_clusters = ncluster, affinity = 'cosine', linkage = way)\n",
+        "      n_clusters = ncluster, affinity = nsm, linkage = way)\n",
         "  # save clusters for chart\n",
         "  y_hc = hc.fit_predict(embeddings)\n",
         "  return y_hc"
@@ -5930,7 +5935,7 @@
       "metadata": {
         "id": "SGp-aFdxbY0Q"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5939,7 +5944,7 @@
         "#@title Create dendrogram graph\n",
         "plt.figure(figsize = (18, 5))\n",
         "dendrogram = sch.dendrogram(\n",
-        "    sch.linkage(embeddings, method='complete', metric = \"cosine\"), \n",
+        "    sch.linkage(embeddings, method='complete', metric = \"cosine\"),\n",
         "    leaf_rotation=0, above_threshold_color='magenta')\n",
         "plt.hlines(1.25, 0, 1000, color = \"magenta\")"
       ],
@@ -5951,7 +5956,7 @@
         "id": "2PSqRvGlbXEm",
         "outputId": "e97ea1f8-a5a4-430c-b72a-f948cbbd695a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5978,12 +5983,12 @@
     {
       "cell_type": "code",
       "source": [
-        "y_hc = cluster_with_cosine_way(embeddings, \"complete\")"
+        "y_hc = cluster_with_many_ways(embeddings, \"complete\")"
       ],
       "metadata": {
         "id": "dvI0NcsJdxX5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5995,7 +6000,7 @@
       "metadata": {
         "id": "DZeSq1dReVxc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6018,7 +6023,7 @@
       "metadata": {
         "id": "x_cBFg4MnWZl"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6035,7 +6040,7 @@
         "id": "DDdL62EGez-h",
         "outputId": "f115f52c-5541-48ff-a780-2e4444719f5b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6053,7 +6058,7 @@
       "cell_type": "code",
       "source": [
         "data_table.DataTable(\n",
-        "  output_df.sort_values(\"cluster\")[[\"cluster\", \"text\"]], \n",
+        "  output_df.sort_values(\"cluster\")[[\"cluster\", \"text\"]],\n",
         "  num_rows_per_page=10)"
       ],
       "metadata": {
@@ -6064,7 +6069,7 @@
         "id": "rfCfbY2Heq4t",
         "outputId": "2c1065fa-cb3d-4e29-ad35-8f8da60b98a5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6181,7 +6186,7 @@
       "metadata": {
         "id": "nD4dtqNWfzoP"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6199,7 +6204,7 @@
         "id": "BqNRx5R4gOSS",
         "outputId": "9a202c35-d48d-462a-efa5-a90f398d2a1a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6231,7 +6236,7 @@
           "height": 377
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6278,7 +6283,7 @@
       "metadata": {
         "id": "a1h7RIgTox5P"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6296,7 +6301,7 @@
       "metadata": {
         "id": "Lm4tOnxHotdQ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6304,7 +6309,8 @@
       "source": [
         "def top_words(word_lst, n=2):\n",
         "  try:\n",
-        "    return \" * \".join([x[0] for x in Counter([w for g in word_lst for w in g]).most_common(n)])\n",
+        "    return \" * \".join([x[0] if x[1] > 1 else \"NA\" for x in Counter(\n",
+        "        [w for g in word_lst for w in set(g)]).most_common(n)])\n",
         "  except:\n",
         "    print(\"something wong\")\n",
         "    return \"\""
@@ -6312,7 +6318,7 @@
       "metadata": {
         "id": "bEhJgsGFp1jk"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6324,7 +6330,7 @@
       "metadata": {
         "id": "21rB9w9rouLK"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6337,7 +6343,7 @@
         "      \"intent\":lambda x: \"\".join(str(x)),\n",
         "      \"text\":np.size,\n",
         "      \"norm_word_lst\":top_words}\n",
-        "    ).sort_values(\"text\", ascending = False), \n",
+        "    ).sort_values(\"text\", ascending = False),\n",
         "  num_rows_per_page=10)"
       ],
       "metadata": {
@@ -6348,7 +6354,7 @@
           "height": 662
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
