--- a/ML_TLC_w_PALM.ipynb
+++ b/ML_TLC_w_PALM.ipynb
@@ -5516,13 +5516,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "2ew7HTbPpCJH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "913bb7e2-ed46-4fad-abe3-e3047251e6f9"
+        "outputId": "d35de9fa-948d-440f-845c-adfefad68d9e"
       },
       "outputs": [
         {
@@ -5561,7 +5561,8 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install -U google-generativeai"
+        "#@title OPTIONAL if not running PALM: Process PALM <br/> <br/>[NOTE] Uncomment and run the first time you start the runtime. Runtime needs to be restarted after the initial installation\n",
+        "# pip install -U google-generativeai"
       ],
       "metadata": {
         "id": "G2BCI9eGpb5g"
@@ -6217,7 +6218,9 @@
         "\n",
         "<br/>\n",
         "\n",
-        "This turorial gives you the option to **choose from 3 encoder models**: the Universal Language Encoder, BERT, and small BERT."
+        "Moreover, with the recent Large Language Model (LLM) development, there are also a suite of neural machine trained transders like PaLM, LaMDA, MUM, Bert and more. You can read more about them [in this TensorFlow tutorial](https://www.tensorflow.org/text/tutorials/transformer). This tutorial will only cover the more currently up-to-date model, i.e. PaLM.\n",
+        "\n",
+        "<h2>[Summary]</h2><br/> This turorial gives you the option to **choose from 3 encoder models**: the Universal Language Encoder, NNLM, and PALM. However, you can leverage the same structure to experiment with other models."
       ],
       "metadata": {
         "id": "OTVTYuzuQQ9M"
@@ -6226,46 +6229,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7kLIgt0Z0RBU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "143d0b42-2590-4c22-cc16-9f730eb98b15"
+        "id": "7kLIgt0Z0RBU"
       },
       "source": [
-        "choose_model = \"ulm\" #@param [\"ulm\", \"bert\", \"small-bert\"]\n",
+        "choose_model = \"nnlm\" #@param [\"ulm\", \"nnlm\"]\n",
         "\n",
         "def embed(input):\n",
-        "\n",
+        "  # add on to this format for other embeddings if needed\n",
         "  if choose_model == \"ulm\":\n",
         "    module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\"\n",
         "    model = hub.load(module_url)\n",
         "    print (\"module %s loaded\" % module_url)\n",
         "    return model(input)\n",
-        "  elif choose_model == \"bert\":\n",
-        "    module_url = \"https://tfhub.dev/google/experts/bert/wiki_books/2\"\n",
-        "    PREPROCESS_MODEL = \"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\"\n",
-        "    preprocess = hub.load(PREPROCESS_MODEL)\n",
-        "    print (\"module %s loaded\" % module_url)\n",
-        "    bert = hub.load(module_url)\n",
-        "    return bert(preprocess(input))[\"pooled_output\"]\n",
-        "  elif choose_model == \"small-bert\"\n",
+        "  elif choose_model == \"nnlm\":\n",
         "    module_url = \"https://tfhub.dev/google/nnlm-en-dim128/2\"\n",
         "    embed = hub.KerasLayer(module_url)\n",
         "    print (\"module %s loaded\" % module_url)\n",
         "    return embed(input)\n",
+        "  elif choose_model == \"palm\":\n",
+        "    if code is not None:\n",
+        "      return [palm.generate_embeddings(model=model, text=x)[\"embedding\"]  for x in input]\n",
+        "    else:\n",
+        "      print(\"Please load the PaLM model with your API key and try again\")\n",
+        "      return None\n",
         ""
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "module https://tfhub.dev/google/universal-sentence-encoder/4 loaded\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -6297,18 +6287,7 @@
     {
       "cell_type": "code",
       "source": [
-        "embeddings = [palm.generate_embeddings(model=model, text=x.decode(\"utf-8\"))[\"embedding\"]  for x in text]"
-      ],
-      "metadata": {
-        "id": "7Bj1W3PotoZA"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plot_similarity(range(3), embeddings[:3],#embed(text[:3]),\n",
+        "plot_similarity(range(3), embed(text[:3]),\n",
         "                0, 0)"
       ],
       "metadata": {
@@ -6337,7 +6316,7 @@
       "cell_type": "code",
       "source": [
         "#@title transform to embeddings\n",
-        "embeddings = embed(text)"
+        "embeddings = embed([x.decode(\"utf-8\") for x in text])"
       ],
       "metadata": {
         "id": "LljLuj2ubbLD"
@@ -6432,10 +6411,10 @@
       ],
       "metadata": {
         "id": "dvI0NcsJdxX5",
-        "outputId": "bf1bfc7f-49cc-49af-b4fe-7d53fd7a4319",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf1bfc7f-49cc-49af-b4fe-7d53fd7a4319"
       },
       "execution_count": 17,
       "outputs": [
