--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5507,12 +5507,26 @@
       "source": [
         "# Credits\n",
         "\n",
-        "You can refer to [this TensorFlow tutorial](https://www.tensorflow.org/hub/tutorials/tf2_text_classification) on how to import the data.\n",
-        "\n",
-        "# 0. Setup\n",
-        "\n",
-        "## 0.1 Install libraries"
+        "You can refer to [this TensorFlow tutorial](https://www.tensorflow.org/hub/tutorials/tf2_text_classification) on how to import the data."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 0. Setup"
+      ],
+      "metadata": {
+        "id": "g1vfXBmIZGHx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 0.1 Install libraries"
+      ],
+      "metadata": {
+        "id": "hq6alLutZIcv"
+      }
     },
     {
       "cell_type": "code",
@@ -5583,11 +5597,11 @@
         "! pip install openai"
       ],
       "metadata": {
-        "id": "KpLLij6I6pP8",
-        "outputId": "6be6972a-e32c-43ef-ee6f-2472e3eb15fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KpLLij6I6pP8",
+        "outputId": "6be6972a-e32c-43ef-ee6f-2472e3eb15fb"
       },
       "execution_count": 5,
       "outputs": [
@@ -5717,6 +5731,18 @@
         "id": "_ycu-OSe67CC"
       },
       "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title choose embedding / summarization model\n",
+        "choose_model = \"gpt\" #@param [\"ulm\", \"nnlm\", \"palm\", \"gpt\"]"
+      ],
+      "metadata": {
+        "id": "ubDtHGeDY8bx"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6368,11 +6394,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7kLIgt0Z0RBU"
+        "id": "7kLIgt0Z0RBU",
+        "cellView": "form"
       },
       "source": [
-        "choose_model = \"gpt\" #@param [\"ulm\", \"nnlm\", \"palm\", \"gpt\"]\n",
-        "\n",
+        "#@title embedding functions based on model chosen\n",
         "def embed(input):\n",
         "  # add on to this format for other embeddings if needed\n",
         "  if choose_model == \"ulm\":\n",
@@ -7276,11 +7302,11 @@
         "  print(response['choices'][0]['text'])"
       ],
       "metadata": {
-        "id": "Ra16AT3VFVwE",
-        "outputId": "5729e267-4e0c-4ef3-c37d-b60c2c54289b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ra16AT3VFVwE",
+        "outputId": "5729e267-4e0c-4ef3-c37d-b60c2c54289b"
       },
       "execution_count": 105,
       "outputs": [
@@ -7300,7 +7326,6 @@
       "cell_type": "code",
       "source": [
         "#@title PaLM\n",
-        "choose_model = \"palm\"\n",
         "if choose_model == \"palm\":\n",
         "  models = [m for m in palm.list_models() if 'generateText' in m.supported_generation_methods]\n",
         "  gen_model = models[0].name\n",
@@ -7327,7 +7352,6 @@
     {
       "cell_type": "code",
       "source": [
-        "choose_model = \"palm\"\n",
         "if choose_model == \"palm\":\n",
         "  completion = palm.generate_text(\n",
         "      model=gen_model,\n",
@@ -7397,7 +7421,7 @@
       "metadata": {
         "id": "vVStKjA-INTz"
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -7409,12 +7433,12 @@
       ],
       "metadata": {
         "id": "6DZc9TsEdflB",
-        "outputId": "de58d19e-15af-4123-b68e-13ce9d29b06f",
+        "outputId": "d15560ed-5ad1-4a89-d86a-428154318a41",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -7428,12 +7452,12 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df.to_csv('drive/My Drive/ML_TLC/palm_output.csv')"
+        "final_df.to_csv('drive/My Drive/ML_TLC/gpt_output.csv')"
       ],
       "metadata": {
         "id": "zcVDIkuGfCRy"
       },
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": []
     }
   ]
