--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "IMDB Movie review.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5783,42 +5784,17 @@
       "cell_type": "code",
       "source": [
         "# set up OpenAI API\n",
-        "openai.api_key = code\n",
+        "if choose_model == \"gpt\"\n",
+        "  openai.api_key = code\n",
         "# set up PaLM API\n",
-        "palm.configure(api_key=code)"
+        "if choose_model == \"palm\"\n",
+        "  palm.configure(api_key=code)"
       ],
       "metadata": {
         "id": "S96CG9sJ69xO"
       },
       "execution_count": 107,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# lists of models\n",
-        "# openai.Model.list()\n",
-        "for model in palm.list_models():\n",
-        "  if 'embedText' in model.supported_generation_methods:\n",
-        "    print(model.name)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "enHUGOrLsVsq",
-        "outputId": "4cd04e5c-5b6b-437f-a55b-2d942f6f3f17"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "models/embedding-gecko-001\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -6573,7 +6549,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 368
+          "height": 282
         },
         "id": "2PSqRvGlbXEm",
         "outputId": "60eb007c-8534-426e-d270-560a150f8436"
@@ -6997,7 +6973,7 @@
         "outputId": "e63851bd-b13e-4600-a53e-a28fc0bafc7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1057
+          "height": 1504
         }
       },
       "execution_count": 123,
