--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5759,7 +5759,7 @@
       "cell_type": "code",
       "source": [
         "code = builtins.input('Enter your verification code:').strip()\n",
-        "output.clear(wait=True)\n",
+        "output.clear(wait=False)\n",
         "print(\"Verification completed\")"
       ],
       "metadata": {
@@ -5767,9 +5767,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e5gLQyLCq_Fo",
-        "outputId": "3ca59d21-d88c-4e89-95b1-f6704ad61184"
+        "outputId": "83bce4bf-fdbc-44b4-cb7e-60bfe5f7ec4b"
       },
-      "execution_count": 106,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -5784,10 +5784,10 @@
       "cell_type": "code",
       "source": [
         "# set up OpenAI API\n",
-        "if choose_model == \"gpt\"\n",
+        "if choose_model == \"gpt\":\n",
         "  openai.api_key = code\n",
         "# set up PaLM API\n",
-        "if choose_model == \"palm\"\n",
+        "if choose_model == \"palm\":\n",
         "  palm.configure(api_key=code)"
       ],
       "metadata": {
