updated with API code instructions

--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5543,7 +5543,7 @@
           "height": 575
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5604,7 +5604,7 @@
         "id": "KpLLij6I6pP8",
         "outputId": "d14e1b36-074c-4fd4-ac45-fdbee308f258"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5654,7 +5654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "2ew7HTbPpCJH",
         "colab": {
@@ -5699,24 +5699,24 @@
     {
       "cell_type": "code",
       "source": [
-        "import google.generativeai as palm"
-      ],
-      "metadata": {
-        "id": "DlEf6SV9pdX9"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from google.colab import output\n",
         "import builtins"
       ],
       "metadata": {
         "id": "kFeYdqMTpyM9"
       },
-      "execution_count": 5,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import google.generativeai as palm"
+      ],
+      "metadata": {
+        "id": "DlEf6SV9pdX9"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5731,7 +5731,7 @@
       "metadata": {
         "id": "_ycu-OSe67CC"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5743,7 +5743,7 @@
       "metadata": {
         "id": "ubDtHGeDY8bx"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5756,9 +5756,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### How to set up API keys\n",
+        "- PaLM2 API key: [Google AI blog](https://developers.generativeai.google/guide?authuser=1) -> Currently US only\n",
+        "- OpenAI ChatGPT3 API key: [OpenAI API reference](https://platform.openai.com/docs/api-reference/introduction)"
+      ],
+      "metadata": {
+        "id": "mfgagp_Zrhe5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "code = builtins.input('Enter your verification code:').strip()\n",
+        "code = builtins.input('Enter your API code:').strip()\n",
         "output.clear(wait=False)\n",
         "print(\"Verification completed\")"
       ],
@@ -5769,7 +5780,7 @@
         "id": "e5gLQyLCq_Fo",
         "outputId": "071e694b-639a-4742-ba91-a25a6b743d92"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5793,7 +5804,7 @@
       "metadata": {
         "id": "S96CG9sJ69xO"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6000,7 +6011,7 @@
           ]
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6252,7 +6263,7 @@
       "metadata": {
         "id": "4EGMTUr6odLk"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6266,7 +6277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "y8qCnve_-lkO",
         "colab": {
@@ -6416,7 +6427,7 @@
         "      print(\"Please load the GPT model with your API key and try again\")\n",
         "      return None"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6443,7 +6454,7 @@
       "metadata": {
         "id": "m9eVYTebRdgD"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6459,7 +6470,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6484,7 +6495,7 @@
         "id": "eVynPk3hRp-R",
         "outputId": "ccc8afd8-c949-47cd-e44d-46e9048eea8f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6533,7 +6544,7 @@
       "metadata": {
         "id": "SGp-aFdxbY0Q"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6554,7 +6565,7 @@
         "id": "2PSqRvGlbXEm",
         "outputId": "3c75e3b3-e462-4da1-b751-598d1b3c8cc6"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6590,7 +6601,7 @@
         },
         "outputId": "28f18a77-5093-475d-9044-859265622a4e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6611,13 +6622,13 @@
       "metadata": {
         "id": "DZeSq1dReVxc"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 1.3 Explore output"
+        "## 1.3 [Optional] Explore output"
       ],
       "metadata": {
         "id": "QmUXB1cZe8FA"
@@ -6634,7 +6645,7 @@
       "metadata": {
         "id": "x_cBFg4MnWZl"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6651,7 +6662,7 @@
         "id": "DDdL62EGez-h",
         "outputId": "a24a51a6-7368-41a2-9e7f-a3cff84e50bb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6680,7 +6691,7 @@
         "id": "rfCfbY2Heq4t",
         "outputId": "3fbe5f64-456e-4376-8492-769044c204b7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6797,7 +6808,7 @@
       "metadata": {
         "id": "nD4dtqNWfzoP"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6815,7 +6826,7 @@
         "id": "BqNRx5R4gOSS",
         "outputId": "f894a5e5-c5b4-4825-d37d-a342dac96765"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6847,7 +6858,7 @@
           "height": 510
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6894,7 +6905,7 @@
       "metadata": {
         "id": "a1h7RIgTox5P"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6912,7 +6923,7 @@
       "metadata": {
         "id": "Lm4tOnxHotdQ"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6929,7 +6940,7 @@
       "metadata": {
         "id": "bEhJgsGFp1jk"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6941,7 +6952,7 @@
       "metadata": {
         "id": "21rB9w9rouLK"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6957,7 +6968,7 @@
       "metadata": {
         "id": "UMwJq9QCHXvQ"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6976,7 +6987,7 @@
           "height": 925
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7350,7 +7361,7 @@
       "metadata": {
         "id": "ZPxQmnLgFO0l"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7367,7 +7378,7 @@
       "metadata": {
         "id": "8YX4ke5jFCP2"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7383,7 +7394,7 @@
         "id": "Ra16AT3VFVwE",
         "outputId": "e9206100-961c-4da4-a860-9df52a27b8c7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7412,7 +7423,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7444,7 +7455,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
