--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "IMDB Movie review.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6372,7 +6371,7 @@
         "\n",
         "Moreover, with the recent Large Language Model (LLM) development, there are also a suite of neural machine trained transformers like PaLM, LaMDA, MUM, Bert and more. You can read more about them [in this TensorFlow tutorial](https://www.tensorflow.org/text/tutorials/transformer). This tutorial will only cover the more currently up-to-date model, i.e. PaLM.\n",
         "\n",
-        "<h2>[Summary]</h2><br/> This turorial gives you the option to **choose from 3 encoder models**: the Universal Language Encoder, NNLM, and PALM. However, you can leverage the same structure to experiment with other models."
+        "<h2>[Summary]</h2><br/> This turorial gives you the option to **choose from 4 encoder models**: the Universal Language Encoder, NNLM, PALM, and ChatGPT. However, you can leverage the same structure to experiment with other models."
       ],
       "metadata": {
         "id": "OTVTYuzuQQ9M"
