default to sLM and add qualifiers

--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "IMDB Movie review.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5737,7 +5738,7 @@
       "cell_type": "code",
       "source": [
         "#@title choose embedding / summarization model\n",
-        "choose_model = \"gpt\" #@param [\"ulm\", \"nnlm\", \"palm\", \"gpt\"]"
+        "choose_model = \"ulm\" #@param [\"ulm\", \"nnlm\", \"palm\", \"gpt\"]"
       ],
       "metadata": {
         "id": "ubDtHGeDY8bx"
@@ -5768,9 +5769,10 @@
     {
       "cell_type": "code",
       "source": [
-        "code = builtins.input('Enter your API code:').strip()\n",
-        "output.clear(wait=False)\n",
-        "print(\"Verification completed\")"
+        "if choosen_model in [\"palm\", \"gpt\"]:\n",
+        "  code = builtins.input('Enter your API code:').strip()\n",
+        "  output.clear(wait=False)\n",
+        "  print(\"Verification completed\")"
       ],
       "metadata": {
         "colab": {
@@ -7509,9 +7511,22 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title devide whether to write out\n",
+        "write_out = False #@param [\"False\", \"True\"]"
+      ],
+      "metadata": {
+        "id": "D_bn3a5ouxgM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title follow the authentication notification\n",
-        "from google.colab import drive\n",
-        "drive.mount('drive')"
+        "if write_out:\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('drive')"
       ],
       "metadata": {
         "id": "6DZc9TsEdflB",
@@ -7534,7 +7549,9 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df.to_csv('drive/My Drive/ML_TLC/gpt_output.csv')"
+        "if write_out:\n",
+        "  file_name = \"model_output\" #@param\n",
+        "  final_df.to_csv('drive/My Drive/ML_TLC/{}.csv'.format(file_name))"
       ],
       "metadata": {
         "id": "zcVDIkuGfCRy"
