--- a/ML_TLC_w_LLM.ipynb
+++ b/ML_TLC_w_LLM.ipynb
@@ -5769,7 +5769,7 @@
     {
       "cell_type": "code",
       "source": [
-        "if choosen_model in [\"palm\", \"gpt\"]:\n",
+        "if choose_model in [\"palm\", \"gpt\"]:\n",
         "  code = builtins.input('Enter your API code:').strip()\n",
         "  output.clear(wait=False)\n",
         "  print(\"Verification completed\")"
